Deprecates FieldType enum, finalises child ByteField classes, fixes StackOverflow wtih large collection unions